jEdit 4.5 version history
       (changes since jEdit 4.4)
:encoding=UTF-8:

{{{ Version 4.5pre1

Thanks to Matthieu Casanova, Bad Sector, Bad Sector, Dale Anson, kog13 and Matthew Gilbert for contributing to this
release

{{{ API Changes
-New method TextArea.getVisibleLineText(screenLine) and
 TextArea.getVisibleLineSegment() that returns
 the visible part of the given line (Matthieu Casanova)

}}}
{{{ Editing

-Applied patch from Matthew Gilbert to add ability to increase/decrease line spacing in the text area. (#3023134, Dale Anson)

-Added jflex edit mode (Matthieu Casanova)

-Added "using" keyword to haXe edit mode (patch #3081482 from Bad Sector, Matthieu Casanova)
}}}

{{{ Miscellaneous
-Added a new menu item "New Macro" in Macros menu (patch #2983607 from kog13, Matthieu Casanova)

}}}
}}}

jEdit buffer local properties:
:folding=explicit:collapseFolds=2: